feat: implement card area

--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,26 @@
     </header>
 
     <main class="main">
+      <section class="main-info">
+        <h2 class="main-info-header">Software development<br>and optimization</h2>
+        <section class="main-info-cards">
+          <article class="main-info-cardArea">
+            <h3 class="main-info-cardArticle">We give guarantees</h3>
+            <p class="main-info-cardText">We work only by agreement and we do not take payment for the work that has not yet been completed.</p>
+            <a class="main-info-cardLink">Learn more >></a>
+          </article>
+          <article class="main-info-cardArea">
+            <h3 class="main-info-cardArticle">We support the project</h3>
+            <p class="main-info-cardText">We know how to attract targeted traffic to a site and convert it into sales.</p>
+            <a class="main-info-cardLink">Learn more >></a>
+          </article>
+          <article class="main-info-cardArea">
+            <h3 class="main-info-cardArticle">We are always in touch</h3>
+            <p class="main-info-cardText">We are always on the line 24/7. Seriously. Even if you just want to talk.</p>
+            <a class="main-info-cardLink">Learn more >></a>
+          </article>
+        </section>
+      </section>
 
     </main>
 
