feat: implement projects section with slider

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="./components/slick/slick.css">
+  <link rel="stylesheet" type="text/css" href="./components/slick/slick-theme.css">
   <link href="styles/style.css" rel="stylesheet">
   <title>ExtBel</title>
 </head>
@@ -65,6 +67,59 @@
           </article>
         </section>
       </section>
+      <section class="main-projects">
+        <h2 class="main-projects-header">Our projects</h2>
+        <section class="main-projects-slider regular slider">
+          <section class="main-projects-slide">
+            <img src="./assets/images/picture.png">
+            <section class="main-projects-articleArea">
+              <h3 class="main-projects-slideArticle">OdnoKarta</h3>
+              <p class="main-projects-slideText">Extbel team created an app “Odnokarta” that keeps all discount cards quickly and easily in one application.</p>
+              <a class="main-projects-slideLink">Read more >></a>
+            </section>
+          </section>
+          <section class="main-projects-slide">
+            <img src="./assets/images/picture-2.png">
+            <section class="main-projects-articleArea">
+              <h3 class="main-projects-slideArticle">Raketa.by</h3>
+              <p class="main-projects-slideText">Extbel team created a website and mobile version of the network of offline stores and an online store of children's toys.</p>
+              <a class="main-projects-slideLink">Read more >></a>
+            </section>
+          </section>
+          <section class="main-projects-slide">
+            <img src="./assets/images/picture.png">
+            <section class="main-projects-articleArea">
+              <h3 class="main-projects-slideArticle">OdnoKarta</h3>
+              <p class="main-projects-slideText">Extbel team created an app “Odnokarta” that keeps all discount cards quickly and easily in one application.</p>
+              <a class="main-projects-slideLink">Read more >></a>
+            </section>
+          </section>
+          <section class="main-projects-slide">
+            <img src="./assets/images/picture-2.png">
+            <section class="main-projects-articleArea">
+              <h3 class="main-projects-slideArticle">Raketa.by</h3>
+              <p class="main-projects-slideText">Extbel team created a website and mobile version of the network of offline stores and an online store of children's toys.</p>
+              <a class="main-projects-slideLink">Read more >></a>
+            </section>
+          </section>
+          <section class="main-projects-slide">
+            <img src="./assets/images/picture.png">
+            <section class="main-projects-articleArea">
+              <h3 class="main-projects-slideArticle">OdnoKarta</h3>
+              <p class="main-projects-slideText">Extbel team created an app “Odnokarta” that keeps all discount cards quickly and easily in one application.</p>
+              <a class="main-projects-slideLink">Read more >></a>
+            </section>
+          </section>
+          <section class="main-projects-slide">
+            <img src="./assets/images/picture-2.png">
+            <section class="main-projects-articleArea">
+              <h3 class="main-projects-slideArticle">Raketa.by</h3>
+              <p class="main-projects-slideText">Extbel team created a website and mobile version of the network of offline stores and an online store of children's toys.</p>
+              <a class="main-projects-slideLink">Read more >></a>
+            </section>
+          </section>
+        </section>
+    </section>
 
     </main>
 
@@ -72,5 +127,16 @@
 
     </footer>
   </div>
+
+  <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+  <script src="./components/slick/slick.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript">
+    $(".regular").slick({
+      dots: true,
+      infinite: true,
+      slidesToShow: 2,
+      slidesToScroll: 2
+    });
+  </script>
 </body>
 </html>
